2007-10-01 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDbUtils/_ReadXML.py: read region tag in xml
	* src/GrampsDb/_GrampsDbWriteXML.py: output region tag in xml (=subsection of picture)
	* src/GrampsDb/_GrampsDbConst.py: change env_dir in ENV_DIR
	* src/Editors/_EditMediaRef.py: remove bug with coord None

2007-10-01 James G. Sack <jgsack@san.rr.com>
	* src/gramps.py: remove wrong setting of sys.path

2007-10-01  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/plugins/DescendChart.py:
	* src/plugins/AncestorChart.py:
	Adjust available paper height when report is forced onto one page,
	so that it won't draw on the bottom margin.

2007-10-01 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_DbUtils.py: do deep copy of bookmarks from old to new db
	* src/GrampsDb/_GrampsXMLDB.py: in load_from: load correct bookmarks

2007-09-30  Brian Matherly <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0001238: Web report: sort references for 
	places and media

2007-09-30  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_ReportDialog.py: 0001253: Calendar report crashes without 
	margins entered.

2007-09-30  Stephane Charette <stephanecharette@gmail.com>
	* src/data/main*.css: fix IE7 display problem when viewing Narrative
	Web gallery images (gramps bug report #0001266)

2007-09-30  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/GtkPrint.py (on_draw_page): Fix zooming problem in preview.

2007-09-29  Brian Matherly <brian@gramps-project.org>
	* src/plugins/GVHourGlass.py: Added.
	* src/ReportBase/_GraphvizReportDialog: Added
	* src/ReportBase/_Constants.py: Add Graphviz type.
	* src/ReportBase/_ReportDialog.py: Add Graphviz type.
	* src/BaseDoc.py: Add GVDoc interface.

2007-09-29  Brian Matherly <brian@gramps-project.org>
	* src/gramps.py: Don't import gramps_main until logging is setup.

2007-09-29 Benny Malengier <benny.malengier@gramps-project.org> 