@@ -70,6 +70,9 @@ import QuestionDialog
 from Selectors import selector_factory
 SelectPerson = selector_factory('Person')
 
+_RETURN = gtk.gdk.keyval_from_name("Return")
+_KP_ENTER = gtk.gdk.keyval_from_name("KP_Enter")
+
 class ChildEmbedList(EmbeddedList):
     """
     The child embed list is specific to the Edit Family dialog, so it
@@ -724,7 +727,8 @@ class EditFamily(EditPrimary):
                               'select the existing family'))
 
     def edit_person(self,obj,event,handle):
-        if event.type == gtk.gdk.BUTTON_PRESS and event.button == 1:
+        if event.type == gtk.gdk.BUTTON_PRESS and event.button == 1 \
+            or event.keyval in (_RETURN, _KP_ENTER):
             from _EditPerson import EditPerson
             try:
                 person = self.db.get_person_from_handle(handle)
